--- a/app/views/layouts/_logged_in_nav.html.erb
+++ b/app/views/layouts/_logged_in_nav.html.erb
@@ -1,32 +1,34 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="/">RUSHBASE</a>
-    </div>
+    <div class="container"></div>
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">RUSHBASE</a>
+      </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-       <li><%= link_to 'Notifications', edit_user_registration_path, class: "glyphicon glyphicon-bell" %></li>
-       <li><a href="/feed"><span class="glyphicon glyphicon-home"></span> Home</a></li>
-        <li class="dropdown">
-          <a href="/profile" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-user"> </span><%= current_user.full_name %> <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="/profile"> View Profile</a></li>
-            <li class="divider"></li>
-            <li><a href="users/edit"> Edit Profile</a></li>
-            <li class="divider"></li>
-            <li><%= link_to " Logout", destroy_user_session_path, :method => :delete %></li>
-          </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+         <li><%= link_to 'Notifications', edit_user_registration_path, class: "glyphicon glyphicon-bell" %></li>
+         <li><a href="/feed"><span class="glyphicon glyphicon-home"></span> Home</a></li>
+          <li class="dropdown">
+            <a href="/profile" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-user"> </span><%= current_user.full_name %> <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="/profile"> View Profile</a></li>
+              <li class="divider"></li>
+              <li><a href="users/edit"> Edit Profile</a></li>
+              <li class="divider"></li>
+              <li><%= link_to " Logout", destroy_user_session_path, :method => :delete %></li>
+            </ul>
+          </li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div>
   </div><!-- /.container-fluid -->
 </nav>
