--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -3,7 +3,6 @@ body {
   margin-bottom: 100px;
 }
 
-
 .gi-2x{font-size: 2em;}
 .gi-3x{font-size: 3em;}
 .gi-4x{font-size: 4em;}
@@ -13,5 +12,9 @@ h1, h2, h3, h4, h5, h6, p {
   margin: 0;
   padding: 0;
   font-weight: normal;
+}
+
+.after-navbar {
+  margin-bottom:50px;
 }
 
