--- a/app/views/layouts/_home_nav.html.erb
+++ b/app/views/layouts/_home_nav.html.erb
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
@@ -21,5 +22,6 @@
         <li><%= link_to "Sign Up", new_user_registration_path, class: "btn btn-sm btn-success btn-mini" %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
+    </div>
   </div><!-- /.container-fluid -->
 </nav>
