--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,8 +32,10 @@
         </div>
       </div>
     </section>
+    <aside class="text-center">
+     <h4><i class="fa fa-bars"></i> My stuff</h4>
+    </div>
 
-    <%= render partial: 'users/user_stats'%>
   </div>
   <hr>
 
