--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,5 +7,12 @@
     </div>
   </div>
 </div>
-
+<div class="home-content-one">
+  <div class="row">
+    <div class="content text-center">
+      <h1>Connect with like minded learners</h1>
+      <a href="" class="btn btn-success btn-lg"> Explore</a>
+    </div>
+  </div>
+</div>
 
