--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,7 +7,35 @@
     </div>
   </div>
 </div>
-<div class="home-content-one">
+
+<div class="home home-content-two">
+  <div class="row">
+    <div class="content text-center">
+      <h1>Its easy to get started</h1>
+      <a href="" class="btn btn-success btn-lg"> Explore</a>
+    </div>
+  </div>
+</div>
+
+<div class="home home-content-three">
+  <div class="row">
+    <div class="content text-center">
+      <h1>Connect with like minded learners</h1>
+      <a href="" class="btn btn-success btn-lg"> Explore</a>
+    </div>
+  </div>
+</div>
+
+<div class="home home-content-four">
+  <div class="row">
+    <div class="content text-center">
+      <h1>Connect with like minded learners</h1>
+      <a href="" class="btn btn-success btn-lg"> Explore</a>
+    </div>
+  </div>
+</div>
+
+<div class="home home-content-five">
   <div class="row">
     <div class="content text-center">
       <h1>Connect with like minded learners</h1>
