--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,44 +1,64 @@
+<div class="profile-wrapper">
+  <div class="container">
+    <% @user ||= current_user %>
+    <div class="row user-info-section">
+      <section class="col-md-12">
+        <div class="left-user-info text-center col-md-8">
+          <div class="main-profile">
+          <h3 class="user-name"><%= @user.full_name %></p>
+          <div class"user-avatar col-md-3 col-sm-6 col-xs-12"><%= image_tag @user.avatar.url(:thumb), :class => "img-circle"%>
+          </div>
+          <p><%= @user.industry.name %></p>
+          <p>Boston, MA</p>
+        </div>
 
-<div class="container">
-  <% @user ||= current_user %>
-  <div class="row user-info-section">
-    <section class="col-md-12">
-      <div class="left-user-info text-center col-md-12">
-        <div class="main-profile">
-        <h3 class="user-name"><%= @user.full_name %></p>
-        <div class"user-avatar col-md-3 col-sm-6 col-xs-12"><%= image_tag @user.avatar.url(:thumb), :class => "img-circle"%>
+        <div class="row profile-footer">
+          <div class="user-stats col-sm-6">
+            <div class="col-md-3 col-sm-3 stat">
+              <%= link_to @user.followers.count, followers_user_path(@user) %>
+              <div>Followers</div>
+            </div>
+            <div class="col-md-3 col-sm-3 col-xs-12 stat">
+              <%= link_to @user.following_users.count, following_user_path(@user) %>
+              <div>Following</div>
+            </div>
+            <div class="col-md-3 col-sm-3 col-xs-12 stat">
+              <%= link_to @user.following_users.count, upvotes_user_path(@user) %>
+              <div>Favorites</div>
+            </div>
+          </div>
+          <div class="user-action-icons col-lg-6">
+            <a class="icon circle col-md-3 col-sm-4"  href="/users/edit"><span class="glyphicon glyphicon-edit gi-3x"></span></a>
+            <a class=" icon circle col-md-3 col-sm-4" href="/user_posts/new"><span class="glyphicon glyphicon-plus gi-3x"></span></a>
+            <a class=" icon circle col-md-3 col-sm-4" href="/edit"><span class="glyphicon glyphicon-chevron-down gi-3x"></span></a>
+            <a href="" class="btn btn-primary btn-lg">Follow</a>
+          </div>
         </div>
-        <p><%= @user.industry.name %></p>
-        <p>Boston, MA</p>
-      </div>
+        </div>
+      </section>
+    </div>
 
-      <div class="row profile-footer">
-        <div class="user-stats col-sm-6">
-          <div class="col-md-3 col-sm-3 stat">
-            <%= link_to @user.followers.count, followers_user_path(@user) %>
-            <div>Followers</div>
-          </div>
-          <div class="col-md-3 col-sm-3 col-xs-12 stat">
-            <%= link_to @user.following_users.count, following_user_path(@user) %>
-            <div>Following</div>
-          </div>
-          <div class="col-md-3 col-sm-3 col-xs-12 stat">
-            <%= link_to @user.following_users.count, upvotes_user_path(@user) %>
-            <div>Favorites</div>
-          </div>
+    <div class="row">
+      <div class="education-info-section col-md-8">
+        <div class="current-courses item col-md-12">
+          <h4>Current Courses</h4>
         </div>
-        <div class="user-action-icons col-lg-6">
-          <a class="icon circle col-md-3 col-sm-4"  href="/users/edit"><span class="glyphicon glyphicon-edit gi-3x"></span></a>
-          <a class=" icon circle col-md-3 col-sm-4" href="/user_posts/new"><span class="glyphicon glyphicon-plus gi-3x"></span></a>
-          <a class=" icon circle col-md-3 col-sm-4" href="/edit"><span class="glyphicon glyphicon-chevron-down gi-3x"></span></a>
-          <a href="" class="btn btn-primary btn-lg">Follow</a>
+        <div class="previous-courses item col-md-12">
+          <h4>Previous Courses</h4>
+        </div>
+        <div class="education-history item col-md-12">
+          <h3>Education</h3>
+          <p>Degree/certificates</p>
+          <p>key courses</p>
+        </div>
+        <div class="favorite-resourses item col-md-12">
+          <h3>Learning Resources</h3>
+          <ul>
+          <li>kdfklsjflsjflkjs</li>
+          </ul>
         </div>
       </div>
-      <!-- <aside class="col-md-3">
-        <h4><i class="fa fa-bars"></i> My stuff</h4>
-      </aside> -->
-      </div>
-    </section>
+    </div>
+
   </div>
-
 </div>
