--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -209,7 +209,7 @@ aside h3 {
 .education-info-section {
   .item{
     margin-top:10px;
-    height:300px;
+    min-height:300px;
     border:1px solid #fff;
     border-radius:5px;
     background-color:#f9fafc;
