--- a/app/views/current_courses/_new.html.erb
+++ b/app/views/current_courses/_new.html.erb
@@ -9,14 +9,14 @@
         </div>
         <div class="modal-body">
           <form ng-submit="saveCurrentCourse(currentCourse)" accept-charset="utf-8">
-            <div class="control-group" style="display: inline-block">
-              <label class="control-label" for="current_course_name">Course name</label>
-              <div class="controls">
-                <input type="text" ng-model="currentCourse.name" class="form-control" required />
+            <div class="control-group">
+              <div class="form-group">
+                <label for="recipient-name" class="control-label">Course Name</label>
+                <input class="form-control" ng-model="currentCourse.name" >
               </div>
-              <label class="control-label" for="current_course_name">orgnaization/website</label>
-              <div class="controls">
-                <input type="text" ng-model="currentCourse.name" class="form-control" required />
+              <div class="form-group">
+                <label for="message-text" class="control-label">Organization</label>
+                <input class="form-control" ng-model="currentCourse.organization" >
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
