Enhence the home page design
* add simple text rotator plugin to allow simple text rotation
* add css to enhence  the look of home page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,10 @@
 
-<div class="home-content-one">
+<div class="home home-content-one">
   <div class="row">
     <div class="content text-center">
       <h1>Connect with like minded learners</h1>
       <a href="" class="btn btn-success btn-lg"> Explore</a>
+      <h1 class="rotate">Learners like you, Courses you are taking, Create discussion, Ask questions, Rate your favorite tutorials, Follow other learners, get credits</span></h1>
     </div>
   </div>
 </div>
@@ -19,18 +20,24 @@
 
 <div class="home home-content-three">
   <div class="row">
-    <div class="content text-center">
-      <h1>Connect with like minded learners</h1>
-      <a href="" class="btn btn-success btn-lg"> Explore</a>
+    <div class="col-md-4">
+      <h2 class="home-page-headline">
+      Learn From Ethusiastic Learners like you and Connect</h2>
     </div>
   </div>
 </div>
 
 <div class="home home-content-four">
   <div class="row">
-    <div class="content text-center">
-      <h1>Connect with like minded learners</h1>
-      <a href="" class="btn btn-success btn-lg"> Explore</a>
+    <div class="col-md-12 content text-center">
+      <div class="icon-teams" style="color:#fff">
+        <i class="fa fa-users fa-5x"></i>
+        <i class="fa fa-users fa-5x"></i>
+        <i class="fa fa-users fa-5x"></i>
+      </div>
+      <h1> You don't have to study alone anymore</h1>
+      <p><strong>Create a team of enthusiastic learners like you based on the course that you are taking, collaborate on projects and enhence your knowledge</strong></p>
+      <a href="/teams" class="btn btn-default btn-lg"> Find Out More </a>
     </div>
   </div>
 </div>
