--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -1,12 +1,13 @@
 
 .reg-form {
   padding-top:20px;
-  border:1px solid #efefef;
-  background-color:#e9f0f3;
+  border:2px solid #efefef;
+  border-radius: 5px;
+  background-color:#fff;
   margin-top:50px;
 
   h4 {
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid #efefef;
     color:green;
     padding-bottom:30px;
     margin-bottom:20px;
