add more sections on homepage

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,3 +18,4 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "rails_bootstrap_forms";
+@import url(http://fonts.googleapis.com/css?family=Roboto|Raleway|Play|Karla|Orbitron|Old+Standard+TT);
