--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -46,7 +46,7 @@ profile-wrapper {
 
 .left-user-info {
   .main-profile {
-    height:80%;
+    min-height:300px;
     background-image: url("greyish.jpg");
     /* Image is centered vertically and horizontally at all times */
     background-position: center center;
