--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,27 +2,48 @@
 <div class="home home-content-one">
   <div class="row">
     <div class="content text-center">
-      <h1>Connect with like minded learners</h1>
+      <h1>Connect With Like Minded Learners</h1>
       <a href="" class="btn btn-success btn-lg"> Explore</a>
-      <h1 class="rotate">Learners like you, Courses you are taking, Create discussion, Ask questions, Rate your favorite tutorials, Follow other learners, get credits</span></h1>
+      <h1 class="rotate">Learners Like You, Courses You Are Taking, Create Discussion, Ask
+      Questions, Rate Your Favorite Tutorials, Follow Other Learners, Get Points For What You Post</span></h1>
     </div>
   </div>
 </div>
 
 <div class="home home-content-two">
   <div class="row">
-    <div class="content text-center">
-      <h1>Its easy to get started</h1>
-      <a href="" class="btn btn-success btn-lg"> Explore</a>
-    </div>
-  </div>
-</div>
-
-<div class="home home-content-three">
-  <div class="row">
-    <div class="col-md-4">
-      <h2 class="home-page-headline">
-      Learn From Ethusiastic Learners like you and Connect</h2>
+    <div class="content container">
+      <h1 class="text-center">Its easy to get started </h1>
+      <div class="cat cat-1 col-md-4 text-center">
+        <p>Users</p>
+        <div class="">
+          <i class="fa fa-user fa-5x fa-lg"></i>
+        </div>
+        <div class="userfs-description row">
+          <p class="text-left">Learners meet to share knowledge and their learning experiences. On Rushbase you can find like minded people that are learning similar courses that you are taking, follow them, ask questions and more</p>
+          <a href="#" class="btn btn-primary">Learn more</a>
+        </div>
+      </div>
+      <div class="cat cat-1 col-md-4 text-center">
+        <p>Organizations</p>
+        <div class="">
+          <i class="fa fa-university fa-5x fa-lg"></i>
+        </div>
+        <div class="org-description row">
+          <p class="text-left">Learners meet to share knowledge and their learning experiences. On Rushbase you can find like minded people that are learning similar courses that you are taking, follow them, ask questions and more</p>
+          <a href="#" class="btn btn-primary">Learn more</a>
+        </div>
+      </div>
+      <div class="cat cat-1 col-md-4 text-center">
+        <p>Tutorial sites</p>
+        <div class="">
+          <i class="fa fa-laptop fa-5x fa-lg"></i>
+        </div>
+        <div class="org-description row">
+          <p class="text-left">Learners meet to share knowledge and their learning experiences. On Rushbase you can find like minded people that are learning similar courses that you are taking, follow them, ask questions and more</p>
+          <a href="#" class="btn btn-primary">Learn more</a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
@@ -35,19 +56,27 @@
         <i class="fa fa-users fa-5x"></i>
         <i class="fa fa-users fa-5x"></i>
       </div>
-      <h1> You don't have to study alone anymore</h1>
+      <h1> You Don't Have To Study Alone Anymore</h1>
       <p><strong>Create a team of enthusiastic learners like you based on the course that you are taking, collaborate on projects and enhence your knowledge</strong></p>
       <a href="/teams" class="btn btn-default btn-lg"> Find Out More </a>
     </div>
   </div>
 </div>
 
-<div class="home home-content-five">
-  <div class="row">
-    <div class="content text-center">
-      <h1>Connect with like minded learners</h1>
-      <a href="" class="btn btn-success btn-lg"> Explore</a>
+<div class="home home-content-three">
+ <div class="container">
+   <div class="row">
+    <div class="col-md-4">
+      <h1 class="home-headline">
+      Find discussions about the courses that you are taking and interact with your fellow life long learners.</h1>
+    </div>
+    <div class="col-md-8 courses-back">
+      <h3 class="text-center">Explore Courses and Discussions</h3>
+      <h1 class="text-center"><span class="rotate">Intro to computer science, Java programming, mobile applications development, Angularjs </span>
+      <a class="btn btn-default text-center"> View Courses </a></h1>
     </div>
   </div>
+ </div>
 </div>
+
 
