--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,6 +1,5 @@
 body {
   background-color:#EBEBEB;
-  margin-bottom: 100px;
 }
 
 .gi-2x{font-size: 2em;}
@@ -12,9 +11,23 @@ h1, h2, h3, h4, h5, h6, p {
   margin: 0;
   padding: 0;
   font-weight: normal;
+  text-rendering: optimizeLegibility;
 }
 
-.after-navbar {
-  margin-bottom:50px;
+
+footer {
+  height:100%;
+  margin:10px;
+  padding:30px;
+
+
+  .footer-content {
+    margin-top:20px;
+    padding:10px;
+  }
+
+  .social-md i {
+
+  }
 }
 
