--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -1,4 +1,4 @@
-profile-wrapper {
+.profile-wrapper {
   /* Location of the image */
   background-image: url("journey2.jpeg");
 
@@ -10,7 +10,6 @@ profile-wrapper {
   height:auto;
   /* Makes the image fixed in the viewport so that it doesn't move when
      the content height is greater than the image height */
-  background-attachment: fixed;
   background-size: cover;
 
   /* Pick a solid background color that will be displayed while the background image is loading */
@@ -30,31 +29,72 @@ profile-wrapper {
 }
 
 .user-info-section {
-  height:360px;
+  min-height:400px;
   margin-top:50px;
-  border-radius:5px;
+  //border-radius:5px;
+  //border-right: none;
+}
 
-  .left-user-info {
-    height: 360px;
-    padding:0px;
-    border:1px solid #efefef;
-    margin-right:30px;
-    border-radius:5px;
-    background-attachment: fixed;
+.user-stat-1 {
+  background-color: #fff;
+  min-height:400px;
+
+  .container {
+    width:100%;
+    background-color: green;
+    min-height: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    margin-right:0px;
+    margin-left: 0px;
+  }
+
+  .row {
+    background-color: red;
+    min-height: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    margin-right:0px;
+    margin-left: 0px;
+  }
+
+  .col-md-6 {
+    padding-left:0px;
+  }
+  .item {
+    text-align:center;
+    height:180px;
+
+    &:hover {
+      background-color:#fff;
+    }
+    .content {
+      padding-top:40px;
+      padding-left:-10px;
+    }
+  }
+
+  .content2 {
+    padding-top:40px;
+    text-align:center;
+    //background-color:#777777;
+    height:100%;
+    width: 100%;
+    height: 180px;
   }
 }
 
-.left-user-info {
+.user-info {
   .main-profile {
-    min-height:300px;
-    background-image: url("greyish.jpg");
+    min-height:400px;
+    //background-image: url("greyish.jpg");
     /* Image is centered vertically and horizontally at all times */
     background-position: center center;
     background-repeat: no-repeat;
     /* Makes the image fixed in the viewport so that it doesn't move when
        the content height is greater than the image height */
     background-attachment: fixed;
-    background-size:coverh;
+    background-size:cover;
     background-color:#464646;
   }
 
